<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="errorIconIv,errorSubtitleTv,errorTitleTv,errorButton" />

    <ImageView
        android:id="@+id/errorIconIv"
        android:layout_width="@dimen/splash_screen_error_icon_size"
        android:layout_height="@dimen/splash_screen_error_icon_size"
        android:src="@drawable/ic_splash_error"
        app:layout_constraintBottom_toTopOf="@id/errorTitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/errorTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/splash_screen_error_title"
        android:textColor="@color/black"
        android:textSize="@dimen/splash_screen_error_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/errorSubtitleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorIconIv" />

    <TextView
        android:id="@+id/errorSubtitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/splash_screen_error_subtitle"
        android:textColor="#333333"
        android:textSize="@dimen/splash_screen_error_subtitle_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTitleTv" />

    <Button
        android:id="@+id/errorButton"
        style="@style/ErrorButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>